kubernetes/apps/networking/static-routes/app/minio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName

  ports:
    - name: console
      port: 9001
    - name: s3
      port: 9000
  externalName: george.${INTERNAL_DOMAIN}
